Improve logic of attendance service class, create sync method